# Iberdrola-Datathon

./: README.md  config.toml  pyproject.toml  standardization.py  sync_cloud_data.py
docs/: index.html  script.js  styles.css  table.html
docs/data/: proposed_stations.csv
docs/maps/: map_1_current_stations.html  map_2_demand_before.html  map_3_proposed_stations.html  map_4_demand_after.html
notebooks/: 01_forecast.ipynb  02_backbone_analysis copy.ipynb  03_optimization_results.ipynb  Iberdrola-Datathon.ipynb
notebooks/archive/: 01_forecast.ipynb  02_backbone_analysis.ipynb
reports/: Analytical_Report_Draft.md
scripts/: standardize_chargers.py  standardize_electric_capacity.py  standardize_gas_stations.py  standardize_roads.py  standardize_traffic.py  standardize_vehicle_registrations.py
scripts/archive/: analyze_grid_feasibility.py  optimize_ev_placement.py
scripts/processing/: analyze_grid_feasibility.py  create_backbone_foundation.py  optimize_grid_aware_placement.py  select_charging_sites.py
scripts/standardization/: standardize_electric_capacity.py
scripts/visualization/: generate_maps.py
