[project]
name = "iberdrola-datathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2026.3.0",
    "fiona>=1.10.1",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pmdarima>=2.1.1",
    "polars>=1.39.3",
    "pulp>=3.3.0",
    "pyarrow>=23.0.1",
    "pyogrio>=0.12.1",
    "pypdf2>=3.0.1",
    "pyproj>=3.7.2",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.33.1",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
